Proj3 Python or Cobol to C++ Converter

--- a/Proj1_Brochure/Main.ipynb
+++ b/Proj1_Brochure/Main.ipynb
@@ -274,7 +274,7 @@
     "    user_prompt = f\"You are looking at a company called: {company_name}\\n\"\n",
     "    user_prompt += f\"Here are the contents of its landing page and other relevant pages; use this information to build a short brochure of the company in markdown.\\n\"\n",
     "    user_prompt += get_all_details(url)\n",
-    "    user_prompt = user_prompt[:5_000] # Truncate if more than 5,000 characters\n",
+    "    user_prompt = user_prompt[:5_000]\n",
     "    return user_prompt"
    ]
   },
