--- a/Proj3_PythonOrCobol_to_C++_Converter/Main.ipynb
+++ b/Proj3_PythonOrCobol_to_C++_Converter/Main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 2,
    "id": "9df32683-1a8b-468d-84a7-0b92d41d10c5",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 3,
    "id": "f8a3ebfd-d373-48b5-81b3-41e3c363eabb",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 22,
    "id": "b069e7a4-8048-4201-bbbf-0c5485753153",
    "metadata": {},
    "outputs": [],
@@ -66,8 +66,7 @@
     "\n",
     "MODEL_GPT_4O = \"gpt-4o\"\n",
     "MODEL_GPT_4_TURBO = \"gpt-4-turbo\"\n",
-    "MODEL_GPT_35_TURBO = \"gpt-3.5-turbo\"\n",
-    "MODEL_LLAMA = 'llama3.2'"
+    "MODEL_GPT_35_TURBO = \"gpt-3.5-turbo\""
    ]
   },
   {
@@ -80,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 5,
    "id": "7b7c5b00-8bab-452d-b759-d96281d4c89a",
    "metadata": {},
    "outputs": [],
@@ -94,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 6,
    "id": "726246cc-9619-4c3f-998f-08ab9435ad82",
    "metadata": {},
    "outputs": [],
@@ -109,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 7,
    "id": "495103c7-198b-48e6-b317-7b5b30c4a3e1",
    "metadata": {},
    "outputs": [],
@@ -131,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 8,
    "id": "879166f7-7d5a-4c00-b126-1c15952d6675",
    "metadata": {},
    "outputs": [],
@@ -144,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 9,
    "id": "2ac0de8b-07db-4424-bc0a-8eb9924eb24f",
    "metadata": {},
    "outputs": [],
@@ -160,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 10,
    "id": "4f6905d4-5ed4-4b6e-a005-8feccdf317fc",
    "metadata": {},
    "outputs": [],
@@ -184,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 11,
    "id": "cdff8d3e-9e30-4748-a7fb-34104f1fa045",
    "metadata": {},
    "outputs": [],
@@ -201,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 12,
    "id": "8833bbb7-29b2-4691-ba58-3a3409d65533",
    "metadata": {},
    "outputs": [],
@@ -231,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 13,
    "id": "76fc611a-b113-419b-8615-cce5f3ef26cf",
    "metadata": {},
    "outputs": [],
@@ -260,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 14,
    "id": "8a85caab-a06c-4b43-92a2-8aebd7e1fc41",
    "metadata": {},
    "outputs": [],
@@ -284,14 +283,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 23,
    "id": "186848e7-b2d1-4661-8ada-59f33879ada1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7881/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7866/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -304,7 +303,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 100,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,9 +315,9 @@
     "    MODEL_GPT_35_TURBO\n",
     "]\n",
     "\n",
-    "with gr.Blocks(css=css) as ui:\n",
+    "with gr.Blocks() as ui:\n",
+    "    gr.Markdown(f\"## Convert code\")\n",
     "    language = gr.Dropdown([\"Python\", \"Cobol\"], label=\"Select language\", value=\"Python\")\n",
-    "    gr.Markdown(\"## Convert code from Python to C++\")\n",
     "    \n",
     "    with gr.Row():\n",
     "        language_code = gr.Textbox(label=\"Language code:\", lines=10)\n",
@@ -335,7 +334,7 @@
     "        cpp_run = gr.Button(\"Run C++\")\n",
     "    \n",
     "    with gr.Row():\n",
-    "        language_out = gr.TextArea(label=\"Language Output\", elem_classes=[\"python\"])\n",
+    "        language_out = gr.TextArea(label=\"Language Output\", elem_classes=[\"language_code\"])\n",
     "        cpp_out = gr.TextArea(label=\"C++ result:\", elem_classes=[\"cpp\"])\n",
     "\n",
     "    convert.click(optimize, inputs=[language_code, model], outputs=[cpp])\n",
